--- a/ZhiXueOpAssist.plist
+++ b/ZhiXueOpAssist.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://172.16.21.109/ZhiXueOpAssist_1036.ipa</string>
+					<string>http://edu.iflytek.com/oss_service/ZhiXueOpAssist_1036.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://172.16.21.109/Icon@2x.png</string>
+					<string>http://edu.iflytek.com/oss_service/Icon@2x.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://172.16.21.109/Icon@2x.png</string>
+					<string>http://edu.iflytek.com/oss_service/Icon@2x.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>天鹰</string>
+				<string>小智助手</string>
 			</dict>
 		</dict>
 	</array>
