--- a/ZhiXueOpAssist.plist
+++ b/ZhiXueOpAssist.plist
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://edu.iflytek.com/oss_service/Icon@2x.png</string>
+					<string>http://edu.iflytek.com/oss_service/xzzs.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://edu.iflytek.com/oss_service/Icon@2x.png</string>
+					<string>http://edu.iflytek.com/oss_service/xzzs.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
